# polymarket-agent

./: .env.example  .gitignore  ACHIEVEMENT_NOTES.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements.txt
docs/: DATA_LAYOUT.md  EXAMPLES_20260709.md  PAPER_TRADE.md  RISK_20260709.md  SCAN_TIPS_20260709.md  USAGE.md
scripts/: daily_scan.ps1  daily_scan.sh
src/polymarket_agent/: __init__.py  __main__.py  agent.py  analyzer.py  cli.py  client.py  config.py  eval.py  models.py  paper.py  resolution.py
tests/: test_analyzer.py  test_client_live.py  test_models.py  test_resolution.py  test_signed_edge.py  test_version.py
