[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "polymarket-agent"
version = "0.1.1"
description = "Research-first Polymarket scanning & paper-trading agent for data science workflows"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Phạm Tiến Phát", email = "tapheret2@users.noreply.github.com" }]
keywords = ["polymarket", "prediction-markets", "agent", "data-science"]
dependencies = [
  "httpx>=0.27",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "rich>=13.7",
  "typer>=0.12",
  "python-dotenv>=1.0",
  "tenacity>=8.2",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-httpx>=0.30", "ruff>=0.4"]

[project.scripts]
pm-agent = "polymarket_agent.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
